mdapiconvert/LightningFlow/objects/Action_Plan_Problem__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Plan Template</label>
        <referenceTo>Action_Plan_Template__c</referenceTo>
        <relationshipLabel>Action Plan Problems</relationshipLabel>
        <relationshipName>Action_Plan_Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Action Plan Problems</relationshipLabel>
        <relationshipName>Action_Plan_Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProblemTemplate__c</fullName>
        <label>Problem Template</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Action Plan Problem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Plan Problem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan Problems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>